# pami_CDF

./: ARCHITECTURE.md  CMakeLists.txt  ESP32_HARDWARE_SPEC.md  EXAMPLES.md  README.md  README_CPP.md  ROS2_GUIDE.md  air-pump.js  esp32-pins.js  esp32-robot.js  idf_component.yml  index.js  led-control.js  limit-switches.js  package.json  power-management.js  robot.js  sdkconfig.defaults  servo-motor.js  test.js
.claude/: launch.json
arduino/pami_forward/: Drivetrain.cpp  Drivetrain.h  Encoder.cpp  Encoder.h  Motor.cpp  Motor.h  Odometry.cpp  Odometry.h  Pins.h  Servo.cpp  Servo.h  UltrasonicSensor.cpp  UltrasonicSensor.h  pami_forward.ino
arduino/pami_scanner/: pami_scanner.ino
include/: air_pump.hpp  led_control.hpp  limit_switches.hpp  pami_robot.hpp  power_management.hpp  servo_motor.hpp
src/: air_pump.cpp  led_control.cpp  limit_switches.cpp  main.cpp  pami_robot.cpp  power_management.cpp  servo_motor.cpp
viz/: index.html
